--- a/site/index.html
+++ b/site/index.html
@@ -399,7 +399,29 @@ style="
 </section>
 
 <footer>
-  <p>&copy; 2025 Master Your Metrics – Tous droits réservés</p>
+  <div style="margin-bottom:18px;">
+    <a href="contact.html"
+       style="
+         display:inline-block;
+         padding:14px 28px;
+         background:transparent;
+         color:white;
+         text-decoration:none;
+         font-weight:600;
+         border-radius:30px;
+         border:2px solid rgba(255,255,255,0.35);
+         transition:all 0.25s ease;
+       "
+       onmouseover="this.style.background='white';this.style.color='#0b1c2d'"
+       onmouseout="this.style.background='transparent';this.style.color='white'"
+    >
+      📬 Contact & FAQ
+    </a>
+  </div>
+
+  <p style="opacity:0.85;">
+    &copy; 2025 Master Your Metrics – Tous droits réservés
+  </p>
 </footer>
 
 <a id="scrollCTA" href="diagnostics/esg.html">🚀 Faites le test</a>
