--- a/site/index.html
+++ b/site/index.html
@@ -393,9 +393,29 @@ style="
 
 
 <section id="contact">
-  <h2>📬 Contactez-nous</h2>
-  <p>Prêt à mesurer et améliorer vos indicateurs clés ?</p>
-  <a href="mailto:masteryourmetrics@gmail.com" class="cta-button">📩 Prendre contact</a>
+  <h2>📬 Une question ? Un besoin précis ?</h2>
+
+  <p>
+    Vous hésitez sur la priorité à traiter, le bon module à activer
+    ou la suite à donner à votre diagnostic ?
+  </p>
+
+  <div style="margin-top:25px;">
+    <a href="contact.html" class="cta-button"
+       style="margin-right:15px;">
+      💬 Accéder à la page Contact & FAQ
+    </a>
+
+    <a href="mailto:masteryourmetrics@gmail.com"
+       class="cta-button"
+       style="background:linear-gradient(135deg,#28a745,#1e7e34);">
+      📩 Contact direct par e-mail
+    </a>
+  </div>
+
+  <p style="font-size:0.9em; color:#666; margin-top:18px;">
+    ✔ Réponse humaine &nbsp;•&nbsp; ✔ Sans engagement &nbsp;•&nbsp; ✔ Orientation claire
+  </p>
 </section>
 
 <footer>
