--- a/site/index.html
+++ b/site/index.html
@@ -392,53 +392,33 @@ style="
 </section>
 
 
-<section id="contact">
-  <h2>📬 Une question ? Un besoin précis ?</h2>
+<section id="contact" style="text-align:center;">
+  <h2>Une question précise avant d’aller plus loin ?</h2>
 
-  <p>
-    Vous hésitez sur la priorité à traiter, le bon module à activer
-    ou la suite à donner à votre diagnostic ?
+  <p style="max-width:650px; margin:20px auto 0 auto;">
+    Que ce soit pour comprendre vos résultats, identifier la bonne priorité
+    ou savoir si un accompagnement est pertinent dans votre situation,
+    nous vous orientons de manière claire et factuelle.
   </p>
 
-  <div style="margin-top:25px;">
-    <a href="contact.html" class="cta-button"
-       style="margin-right:15px;">
-      💬 Accéder à la page Contact & FAQ
+  <div style="margin-top:35px; display:flex; justify-content:center; gap:20px; flex-wrap:wrap;">
+    <a href="contact.html" class="cta-button">
+      💬 Contact & FAQ
     </a>
 
     <a href="mailto:masteryourmetrics@gmail.com"
        class="cta-button"
        style="background:linear-gradient(135deg,#28a745,#1e7e34);">
-      📩 Contact direct par e-mail
+      📩 Contact direct
     </a>
   </div>
 
-  <p style="font-size:0.9em; color:#666; margin-top:18px;">
-    ✔ Réponse humaine &nbsp;•&nbsp; ✔ Sans engagement &nbsp;•&nbsp; ✔ Orientation claire
+  <p style="font-size:0.9em; color:#666; margin-top:22px;">
+    ✔ Réponse humaine &nbsp;•&nbsp; ✔ Sans engagement &nbsp;•&nbsp; ✔ Orientation concrète
   </p>
 </section>
 
 <footer>
-  <div style="margin-bottom:18px;">
-    <a href="contact.html"
-       style="
-         display:inline-block;
-         padding:14px 28px;
-         background:transparent;
-         color:white;
-         text-decoration:none;
-         font-weight:600;
-         border-radius:30px;
-         border:2px solid rgba(255,255,255,0.35);
-         transition:all 0.25s ease;
-       "
-       onmouseover="this.style.background='white';this.style.color='#0b1c2d'"
-       onmouseout="this.style.background='transparent';this.style.color='white'"
-    >
-      📬 Contact & FAQ
-    </a>
-  </div>
-
   <p style="opacity:0.85;">
     &copy; 2025 Master Your Metrics – Tous droits réservés
   </p>
