--- a/site/contact.html
+++ b/site/contact.html
@@ -263,6 +263,69 @@ form button:hover {
   <p>
     Un test rapide pour décider ensuite si un échange stratégique vaut la peine.
   </p>
+<!-- =======================
+     BANNIÈRE SERVICES
+======================= -->
+<section style="
+  background: linear-gradient(135deg, #001f3f, #003a70);
+  color: white;
+  padding: 60px 20px;
+  margin: 60px 0;
+">
+
+  <div style="
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
+  ">
+
+    <div style="max-width: 650px;">
+      <h2 style="font-size:2.2em; margin-bottom:15px;">
+        🎯 Du diagnostic à l’action concrète
+      </h2>
+
+      <p style="font-size:1.15em; line-height:1.6; opacity:0.95;">
+        Le diagnostic vous donne une photographie claire.  
+        Nos <strong>sprints d’accompagnement</strong> vous permettent de
+        transformer ces constats en <strong>décisions opérationnelles</strong>,
+        priorisées et mesurables.
+      </p>
+
+      <p style="margin-top:15px; font-size:1em; opacity:0.9;">
+        ESG · Conformité AML/KYC · Digitalisation · Crédit · Cybersécurité
+      </p>
+    </div>
+
+    <div style="text-align:center;">
+      <a href="services.html"
+         style="
+           display:inline-block;
+           background:white;
+           color:#001f3f;
+           padding:18px 42px;
+           font-size:1.2em;
+           border-radius:50px;
+           text-decoration:none;
+           font-weight:bold;
+           box-shadow:0 10px 26px rgba(0,0,0,0.25);
+           transition:all 0.25s ease;
+         "
+         onmouseover="this.style.transform='translateY(-2px)'"
+         onmouseout="this.style.transform='none'">
+        🔍 Découvrir nos services
+      </a>
+
+      <p style="font-size:0.9em; margin-top:12px; opacity:0.85;">
+        Accompagnement clair • Sans jargon • Orienté résultats
+      </p>
+    </div>
+
+  </div>
+</section>
 
   <a href="diagnostics/esg.html"
      style="display:inline-block;background:white;color:#001f3f;
